tests/base/valid/Function_Valid_3.whiley
import whiley.lang.*:*

define fr3nat as int

string f(int x):
    return str(x)

void System::main([string] args):
    y = 234987234987234982304980130982398723
    this.out.println(f(y))
