tests/base/invalid/Assign_CompileFail_5.whiley
import whiley.lang.*:*

int f(bool x):
     return x
